--- a/sample.html
+++ b/sample.html
@@ -26,15 +26,7 @@
 	Please note that the art is another student's, not mine!
     </font>
    </div>
-	<div id="navbar"><table class = "pictures">
-      <th>
-            <img src = "pokecat1_orig.png" width="266.67" height="200" alt="HTML5 Icon">
-        </th>
-           <td> <img src = "pokecat2_orig.png" width="266.67" height="200" alt="HTML5 Icon">
-            </td>
-		<td> <img src = "pokecat3_orig.png" width="266.67" height="200" alt="HTML5 Icon">
-		</td>
-	</table>
+	<div id="navbar"><img src = "pokecat3_orig.png" width="266.67" height="200" alt="HTML5 Icon">	
 	</div>
     <br>
 	<div id="content" style="background-color: #fccfd6; margin-left: 10px; margin-right: 0px; padding-bottom: 8px; padding-left: 8px; padding-right: 8px; padding-top: 8px;">
