--- a/sample.html
+++ b/sample.html
@@ -26,7 +26,7 @@
 	Please note that the art is another student's, not mine!
     </font>
    </div>
-	<div id="navbar"><img src = "pokecat3_orig.png" width="266.67" height="200" alt="HTML5 Icon">	
+	<div id="navbar" style=align:center><img src = "pokecat3_orig.png" width="266.67" height="200" alt="HTML5 Icon">	
 	</div>
     <br>
 	<div id="content" style="background-color: #fccfd6; margin-left: 10px; margin-right: 0px; padding-bottom: 8px; padding-left: 8px; padding-right: 8px; padding-top: 8px;">
