--- a/sample.html
+++ b/sample.html
@@ -26,7 +26,7 @@
 	Please note that the art is another student's, not mine!
     </font>
    </div>
-	<img src = "pokecat3_orig.png" width="266.67" height="200" alt="HTML5 Icon" align=right>
+	<img src = "pokecat3_orig.png" width="266.67" height="200" alt="HTML5 Icon" align=middle>
     <br>
 	<div id="content" style="background-color: #fccfd6; margin-left: 10px; margin-right: 0px; padding-bottom: 8px; padding-left: 8px; padding-right: 8px; padding-top: 8px;">
 <font size = "5">
@@ -35,8 +35,9 @@
 	so contact me if you want to see more!
     </font>
    </div>
+		<img src = "pokecat2_orig.png" width="266.67" height="200" alt="HTML5 Icon" align=middle>
 	</div>
-	<br><br><br><br>
+	
 	<center>
 	<div style="background-color: #fccfd6; margin-left: 10px; margin-right: 0px; padding-bottom: 8px; padding-left: 8px; padding-right: 8px; padding-top: 8px;">
 <font size = "5">
