--- a/sample.html
+++ b/sample.html
@@ -26,7 +26,7 @@
 	Please note that the art is another student's, not mine!
     </font>
    </div>
-	<img src = "pokecat3_orig.png" width="266.67" height="200" alt="HTML5 Icon" align=middle>
+	<img src = "pokecat3_orig.png" width="266.67" height="200" alt="HTML5 Icon" align=center>
     <br>
 	<div id="content" style="background-color: #fccfd6; margin-left: 10px; margin-right: 0px; padding-bottom: 8px; padding-left: 8px; padding-right: 8px; padding-top: 8px;">
 <font size = "5">
@@ -35,11 +35,11 @@
 	so contact me if you want to see more!
     </font>
    </div>
-		<img src = "pokecat2_orig.png" width="266.67" height="200" alt="HTML5 Icon" align=middle>
+	<img src = "pokecat2_orig.png" width="266.67" height="200" alt="HTML5 Icon" align=center>
 	</div>
 	
 	<center>
-	<div style="background-color: #fccfd6; margin-left: 10px; margin-right: 0px; padding-bottom: 8px; padding-left: 8px; padding-right: 8px; padding-top: 8px;">
+	<div style="background-color: #fccfd6; border-radius:25px; margin-left: 10px; margin-right: 0px; padding-bottom: 8px; padding-left: 8px; padding-right: 8px; padding-top: 8px;">
 <font size = "5">
       The following are two non-programming related projects, but I am passionate about them nonetheless.<br>
 	Film is one of my favorite hobbies, so I hope you enjoy!
