--- a/index.html
+++ b/index.html
@@ -4,58 +4,18 @@
 <head>
     <link rel="StyleSheet" href="style.css" type="text/css" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Emma Eggleston </title>
+    <title>Love Like Amy</title>
 </head>
 <body>
 
 <ul class="topnav" id="myTopnav">
   <li><a href="index.html">Home</a></li>
-  <li><a href="about.html">About Me</a></li>
-  <li><a href="contact.html">Contact</a></li>
-  <li><a href="2-8-17 Emma Eggleston Resume.pdf" target = "_block" >Resume</a></li>
-  <li><a href="sample.html">Sample Works</a></li>
+  <li><a href="about.html">About Us</a></li>
   <li class="icon">
     <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
   </li>
 </ul>
-    
-<div id="container">
-    <br/>
-    <p align ="left">
-  <div id="content" style="background-color: #fccfd6; margin-left: 25px; margin-right: 175px; padding-bottom: 8px; padding-left: 8px; padding-right: 0px; padding-top: 8px;">
-<font size = "5">
-      <b>Welcome!</b><br/>
-My name is Emma Eggleston and I am a second year Computer Science student at Georgia Tech.<br>
-    I am passionate about building things and about film,<br> so I am excited to see how I can incorporate the two in my career.<br><br>
-
-    Check out the <a href="about.html">about me</a> page if you want to learn more about me and feel free to contact me as well! <br>
-    Go Jackets!
-    </font>
-   </div>
-    <table class = "pictures">
-        <th>
-            <img src="Emma Myrtle Beach.jpg" width = "200" height = "275" alt="HTML5 Icon">
-        </th>
-           <!-- <td><img src="emmakayla.jpg" width = "200" height = "200" alt="HTML5 Icon"> 
-            </td>
-        </tr> -->
-    </table>
-    <br>
- 
-   <!--<div id="navbar" stylepadding-bottom: ><img src="Emma Myrtle Beach.jpg" width = "200" height = "275" alt="HTML5 Icon"><br> 
-   <div id="navbar"> <img src="emmakayla.jpg" width = "200" height = "200" alt="HTML5 Icon"> 
-</div>
-    </div>    -->
-    
-<div class="MainContainer">
-    </div>  
-    <div id="MenuContainer">
-        <ul id="navigation">
-            <!--<li class="x"><a title="eeggleston3@gatech.edu" href="mailto:eeggleston3@gatech.edu" >eeggleston3@gatech.edu</a></li> !-->
-            <li class="x"><a title="LinkedIn" href="https://www.linkedin.com/in/emma-eggleston-377132105" >LinkedIn</a></li>
-            <li class="x"><a title="GitHub" href="https://github.com/eeggleston3" >GitHub</a></li>
-        </ul>
-    </div> 
+   
 
      </body>
 </html>
