--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
   </li>
 </ul>
+    
+    Hello World!
+    <img src="amy.jpg" alt="Amy Lee"> 
    
 
      </body>
