--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h1>
     Hello World!
     </h1>
-    <img src="amy.jpg" alt="Amy Lee"> 
+    <img src="amy.jpg" alt="Amy Lee" width="480" height="480"> 
    
 
      </body>
