--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <h1>
-    <a href="https://extraspecialpeople.com/amys-memory">Visit ESP's website in honor of Amy!</a>
+    <a href="https://extraspecialpeople.com/amys-memory">Click here to donate to ESP in honor of Amy!</a>
     </h1>
     <img src="amy.jpg" alt="Amy Lee" width="480" height="480"> 
    
