--- a/index.html
+++ b/index.html
@@ -10,9 +10,17 @@
 <body>
 
     <h1>
-    <a href="https://extraspecialpeople.com/amys-memory">Click here to donate to ESP in honor of Amy!</a>
+        Welcome to Love Like Amy!
     </h1>
     <img src="amy.jpg" alt="Amy Lee" width="480" height="480"> 
+    <h2>
+        Put blurb about Amy here
+    </h2>
+    
+    <h3>
+    <a href="extraspecialpeople.com/amys-memory">Click here to donate to ESP in honor of Amy!</a>
+    </h3>
+    
    
 
      </body>
