--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </h2>
     
     <h3>
-    <a href="extraspecialpeople.com/amys-memory">Click here to donate to ESP in honor of Amy!</a>
+    <a href="https://extraspecialpeople.kindful.com/?campaign=334106">Click here to donate to ESP in honor of Amy!</a>
     </h3>
     
    
