--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <h3>
     <a href="https://extraspecialpeople.kindful.com/?campaign=334106">Click here to donate to ESP in honor of Amy!</a>
     </h3>
+    <h4>
+        Or copy and paste: extraspecialpeople.com/amys-memory into your browser.
+    </h4>
     
    
 
