--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="StyleSheet" href="style.css" type="text/css" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Love Like Amy</title>
-    <link rel="icon" type="image/ico" href="lovelikeamy transparent.png" />
+    <link rel="icon" type="image/ico" href="imageedit_20_5888085663.png" />
 </head>
 <body>
 
