--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <h1>
-        <img src="lovelikeamy transparent.jpg" alt="Love Like Amy">
+        <img src="lovelikeamy transparent.png" alt="Love Like Amy">
         Welcome to Love Like Amy!
     </h1>
      
