--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <img src="lovelikeamy transparent (2).png" alt="Love Like Amy" clas="center">
+    <img src="lovelikeamy transparent (2).png" alt="Love Like Amy" class="center" width="491.33" height="264">
     
     <h1>
         Welcome to Love Like Amy!
