--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      
     <h2>
         <img src="amy.jpg" alt="Amy Lee" width="480" height="480">
-        Put blurb about Amy here
+        Love and care for the people around us like Amy always did. Give each other hugs and let them know you love them and will always be there for them no matter how obvious it may seem. Care for one another selflessly, especially for those less fortunate than you. Finally, smile. Amy had a smile that could light up the whole room and your whole life. If we do these things everyh day, I know we will make Amy so proud and she will be smiling on us every step of the way. <br> -Tim Lee
     </h2>
     
     <h3>
