--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
      <h2>
     <div style="display:inline-block;vertical-align:top;float:left;">
-        <img src="amy.jpg" alt="Amy Lee" width="480" height="480">
+        <img src="amy.jpg" alt="Amy Lee" width="480" height="480" margin-right="15em">
 </div>
     <div style="display:inline-block;float:left;">
         Love and care for the people around us like Amy always did.<br> 
@@ -27,7 +27,7 @@
         and she will be smiling on us every step of the way. <br> -Tim Lee
     </div>
     </h2>
-    
+    <br>
     <h3>
     <a href="https://extraspecialpeople.kindful.com/?campaign=334106">Click here to donate to Extra Special People in honor of Amy!</a>
         <br>
