--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
         and she will be smiling on us every step of the way. <br> -Tim Lee
     </div>
     </h2>
+    
     <br>
-    <h3>
+    <h3 style="clear:both;">
     <a href="https://extraspecialpeople.kindful.com/?campaign=334106">Click here to donate to Extra Special People in honor of Amy!</a>
         <br>
     <a href="https://gail.uga.edu/giving/student-ambassador-scholarship">Click here to donate to UGA's COE Amy Katherine Lee Student Ambassador Scholarship!</a>
